@@ -1,3 +1,5 @@
+- "choose desktop" step:
+  o put images along labels in RadioButtons (HIG)
 - summary screen:
   o add spacing around separators
   o fix not displaying the security group
